--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <button onclick='iButton()'>Increment</button>
     <button onclick='dButton()'>Decrement</button>
   </div>
-  <script src="./main.js"></script>
+  <script src="./lib/main.js"></script>
 <body>
 </html>
