--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <title>Minimum Redux</title>
   <script src="./node_modules/redux/dist/redux.js"></script>
+  <script src="./node_modules/react/dist/react.js"></script>
+  <script src="./node_modules/react-dom/dist/react-dom.js"></script>
 </head>
 <body>
   <div><h1>Counter</h1></div>
